--- a/caseStudy.html
+++ b/caseStudy.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Case Study</title>
-    <link rel="icon" type="image/x-icon" href="/TraceyV.github.io/img/logo.png">
-    <link rel="stylesheet" href="/TraceyV.github.io/css/app.css">
-    <link rel="stylesheet" href="/TraceyV.github.io/css/case.css">
+    <link rel="icon" type="image/x-icon" href="/img/logo.png">
+    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/css/case.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Micro+5&family=Oswald:wght@200..700&family=Potta+One&display=swap"
         rel="stylesheet">
@@ -20,16 +20,16 @@
         </section>
         <nav>
             <section id="desktop">
-                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
-                <li><a href="/TraceyV.github.io/about.html">About</a></li>
-                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
-                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/work.html">Work</a></li>
+                <li><a href="/contact.html">Contacts</a></li>
             </section>
             <section id="mobile">
-                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
-                <li><a href="/TraceyV.github.io/about.html">About</a></li>
-                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
-                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/work.html">Work</a></li>
+                <li><a href="/contact.html">Contacts</a></li>
             </section>
             <section class="hamburgerLines" onclick="myFunction(this)">
                 <div class="line1"></div>
@@ -47,13 +47,13 @@
     <div id="containerAB">
         <div id="containerA">
             <h2>&nbsp;Illustrations</h2> <br>
-            <img class="mainSPA" src="/TraceyV.github.io/img/sPA1.png" alt="">
-            <img class="mainSPA" src="/TraceyV.github.io/img/sPA2.png" alt="">
-            <img class="mainSPA" src="/TraceyV.github.io/img/sPA3.png" alt="">
-            <img class="mainSPA" src="/TraceyV.github.io/img/sPA4.png" alt="">
-            <img class="mainSPA" src="/TraceyV.github.io/img/sPA5.png" alt="">
-            <img class="mainSPA" src="/TraceyV.github.io/img/sPA6.png" alt="">
-            <img class="mainSPA" src="/TraceyV.github.io/img/sPA7.png" alt="">
+            <img class="mainSPA" src="/img/sPA1.png" alt="">
+            <img class="mainSPA" src="/img/sPA2.png" alt="">
+            <img class="mainSPA" src="/img/sPA3.png" alt="">
+            <img class="mainSPA" src="/img/sPA4.png" alt="">
+            <img class="mainSPA" src="/img/sPA5.png" alt="">
+            <img class="mainSPA" src="/img/sPA6.png" alt="">
+            <img class="mainSPA" src="/img/sPA7.png" alt="">
         </div>
 
         <div id="containerB">
@@ -81,7 +81,7 @@
                     effective
                     and attractive to the target audience.
                 </p>
-                <img src="/TraceyV.github.io/img/organSketch1.jpg" alt="">
+                <img src="/img/organSketch1.jpg" alt="">
             </div>
         </div>
     </div>
@@ -91,12 +91,12 @@
             to promote the campaign and spread awareness. I tried to stay within the colour palette chosen when doing
             the design for the mockups.
         </p>
-        <img class="mockupPics" src="/TraceyV.github.io/img/billboardMockup.png" alt="">
-        <img class="mockupPics" src="/TraceyV.github.io/img/busstopMockup.png" alt="">
-        <img class="mockupPics" src="/TraceyV.github.io/img/magazineMockup.png" alt="">
-        <img class="mockupPics" src="/TraceyV.github.io/img/igMockup.png" alt="">
-        <img class="mockupPics" src="/TraceyV.github.io/img/t-shirtMockup.png" alt="">
-        <img class="mockupPics" src="/TraceyV.github.io/img/sPA.png" alt="">
+        <img class="mockupPics" src="/img/billboardMockup.png" alt="">
+        <img class="mockupPics" src="/img/busstopMockup.png" alt="">
+        <img class="mockupPics" src="/img/magazineMockup.png" alt="">
+        <img class="mockupPics" src="/img/igMockup.png" alt="">
+        <img class="mockupPics" src="/img/t-shirtMockup.png" alt="">
+        <img class="mockupPics" src="/img/sPA.png" alt="">
     </div>
 
     <footer>
