--- a/projects/project10.html
+++ b/projects/project10.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 8</title>
-    <link rel="icon" type="image/x-icon" href="/TraceyV.github.io/img/logo.png">
-    <link rel="stylesheet" href="/TraceyV.github.io/css/app.css">
-    <link rel="stylesheet" href="/TraceyV.github.io/css/project.css">
+    <link rel="icon" type="image/x-icon" href="/img/logo.png">
+    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/css/project.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Micro+5&family=Oswald:wght@200..700&family=Potta+One&display=swap"
         rel="stylesheet">
@@ -16,22 +16,22 @@
 <body>
     <div class="onTop">
         <section id="logo">
-            <img src="/TraceyV.github.io/img/logo.png" alt="">
+            <img src="/img/logo.png" alt="">
         </section>
         <nav>
             <section id="desktop">
-                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
-                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
-                <li><a href="/TraceyV.github.io/about.html">About</a></li>
-                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
-                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
+                <li><a href="/work.html">&#8678; Back</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/work.html">Work</a></li>
+                <li><a href="/contact.html">Contacts</a></li>
             </section>
             <section id="mobile">
-                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
-                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
-                <li><a href="/TraceyV.github.io/about.html">About</a></li>
-                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
-                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
+                <li><a href="/work.html">&#8678; Back</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/work.html">Work</a></li>
+                <li><a href="/contact.html">Contacts</a></li>
             </section>
             <section class="hamburgerLines" onclick="myFunction(this)">
                 <div class="line1"></div>
@@ -46,7 +46,7 @@
     </div>
 
     <div id="detailsA">
-        <div id="projectPic"><img src="/TraceyV.github.io/projectImg/wineBottleFront.png" alt=""></div>
+        <div id="projectPic"><img src="/projectImg/wineBottleFront.png" alt=""></div>
 
         <div id="infoSections">
             <section>
@@ -68,8 +68,8 @@
             <section>
                 <h2>&nbsp;Software used</h2>
                 <div id="softwareUsed">
-                    <img class="softwareImg" src="/TraceyV.github.io/img/illustrator.png" alt="">
-                    <img class="softwareImg" src="/TraceyV.github.io/img/photoshop.png" alt="">
+                    <img class="softwareImg" src="/img/illustrator.png" alt="">
+                    <img class="softwareImg" src="/img/photoshop.png" alt="">
                 </div>
             </section>
         </div>
@@ -84,7 +84,7 @@
                 I chose the colours of the overall label based on the type of wine it was - Soleil Couchant relates to a hotter colour palette, whereas Rêverie is on the colder side.
                  <br><br>The challenging aspect of this project would be the hierarchy of the overall content of the label as I do have to take into account what a real wine bottle looks like and place them according to the norms and standards of the specified type of bottle.
             </p><br>
-            <img class="outcome" src="/TraceyV.github.io/projectImg/wineBottleDraft.png" alt="">
+            <img class="outcome" src="/projectImg/wineBottleDraft.png" alt="">
         </section>
 
         <section>
@@ -95,22 +95,22 @@
                 The texts that use the cursive fonts make them look visually pleasing to the eyes and give the impression of being the main information of the bottle.
                 Most of the texts are placed on top, besides the alcohol percentage and volume, while the graphic image is placed on the lower half of the label. The same thing can be said for the back side of the label.
             </p><br>
-            <img src="/TraceyV.github.io/projectImg/wineLabelOutcome-01.png" alt="">
-            <img src="/TraceyV.github.io/projectImg/wineLabelOutcome-02.png" alt="">
-            <img src="/TraceyV.github.io/projectImg/wineLabelOutcome-03.png" alt="">
-            <img src="/TraceyV.github.io/projectImg/wineLabelOutcome-04.png" alt="">
-            <img src="/TraceyV.github.io/projectImg/wineBottleFront.png" alt="">
-            <img src="/TraceyV.github.io/projectImg/wineBottleFront2.png" alt="">
-            <img src="/TraceyV.github.io/projectImg/wineBottleBack.png" alt="">
-            <img src="/TraceyV.github.io/projectImg/wineBottleBack2.png" alt="">
+            <img src="/projectImg/wineLabelOutcome-01.png" alt="">
+            <img src="/projectImg/wineLabelOutcome-02.png" alt="">
+            <img src="/projectImg/wineLabelOutcome-03.png" alt="">
+            <img src="/projectImg/wineLabelOutcome-04.png" alt="">
+            <img src="/projectImg/wineBottleFront.png" alt="">
+            <img src="/projectImg/wineBottleFront2.png" alt="">
+            <img src="/projectImg/wineBottleBack.png" alt="">
+            <img src="/projectImg/wineBottleBack2.png" alt="">
         </section>
     </div>
 
 
     <div id="buttonProjects">
-        <button id="previous" class="buttons"><a href="/TraceyV.github.io/projects/project9.html">Previous
+        <button id="previous" class="buttons"><a href="/projects/project9.html">Previous
                 Project</a></button>
-        <button id="next" class="buttons"><a href="/TraceyV.github.io/projects/project11.html">Next Project</a></button>
+        <button id="next" class="buttons"><a href="/projects/project11.html">Next Project</a></button>
     </div>
 
     <footer>
