--- a/projects/project4.html
+++ b/projects/project4.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 4</title>
-    <link rel="icon" type="image/x-icon" href="/TraceyV.github.io/img/logo.png">
-    <link rel="stylesheet" href="/TraceyV.github.io/css/app.css">
-    <link rel="stylesheet" href="/TraceyV.github.io/css/project.css">
+    <link rel="icon" type="image/x-icon" href="/img/logo.png">
+    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/css/project.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Micro+5&family=Oswald:wght@200..700&family=Potta+One&display=swap"
         rel="stylesheet">
@@ -16,22 +16,22 @@
 <body id="body4">
     <div class="onTop">
         <section id="logo">
-            <img src="/TraceyV.github.io/img/logo.png" alt="">
+            <img src="/img/logo.png" alt="">
         </section>
         <nav>
             <section id="desktop">
-                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
-                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
-                <li><a href="/TraceyV.github.io/about.html">About</a></li>
-                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
-                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
+                <li><a href="/work.html">&#8678; Back</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/work.html">Work</a></li>
+                <li><a href="/contact.html">Contacts</a></li>
             </section>
             <section id="mobile">
-                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
-                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
-                <li><a href="/TraceyV.github.io/about.html">About</a></li>
-                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
-                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
+                <li><a href="/work.html">&#8678; Back</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/work.html">Work</a></li>
+                <li><a href="/contact.html">Contacts</a></li>
             </section>
             <section class="hamburgerLines" onclick="myFunction(this)">
                 <div class="line1"></div>
@@ -46,7 +46,7 @@
     </div>
 
     <div id="detailsA">
-        <div id="projectPic"><img src="/TraceyV.github.io/img/ebookMockup.png" alt=""></div>
+        <div id="projectPic"><img src="/img/ebookMockup.png" alt=""></div>
 
         <div id="infoSections">
             <section>
@@ -64,8 +64,8 @@
             <section>
                 <h2>&nbsp;Software used</h2>
                 <div id="softwareUsed">
-                    <img class="softwareImg" src="/TraceyV.github.io/img/illustrator.png" alt="">
-                    <img class="softwareImg" src="/TraceyV.github.io/img/indesign.png" alt="">
+                    <img class="softwareImg" src="/img/illustrator.png" alt="">
+                    <img class="softwareImg" src="/img/indesign.png" alt="">
                 </div>
             </section>
         </div>
@@ -82,7 +82,7 @@
                 <br><br>The challenge comes with drawing the graphic elements as I purely used my mouse and keyboard to
                 draw them. I would use the pen tool to draw specific lines, and it took some time to do all of them.
             </p><br>
-            <img class="outcome" src="/TraceyV.github.io/projectImg/ebookSketch.png" alt="">
+            <img class="outcome" src="/projectImg/ebookSketch.png" alt="">
         </section>
 
         <section>
@@ -91,15 +91,15 @@
                 early and I let myself handle the extra details when I was done with the base design for example;
                 gradients, animations, etc…
             </p><br>
-                <img class="outcome" src="/TraceyV.github.io/img/ebook.png" alt="">
-                <img class="outcome" src="/TraceyV.github.io/img/ebookBack.png" alt="">
+                <img class="outcome" src="/img/ebook.png" alt="">
+                <img class="outcome" src="/img/ebookBack.png" alt="">
         </section>
     </div>
 
     <div id="buttonProjects">
-        <button id="previous" class="buttons"><a href="/TraceyV.github.io/projects/project3.html">Previous
+        <button id="previous" class="buttons"><a href="/projects/project3.html">Previous
                 Project</a></button>
-        <button id="next" class="buttons"><a href="/TraceyV.github.io/projects/project5.html">Next Project</a></button>
+        <button id="next" class="buttons"><a href="/projects/project5.html">Next Project</a></button>
     </div>
 
     <footer>
