--- a/projects/project6.html
+++ b/projects/project6.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 6</title>
-    <link rel="icon" type="image/x-icon" href="/TraceyV.github.io/img/logo.png">
-    <link rel="stylesheet" href="/TraceyV.github.io/css/app.css">
-    <link rel="stylesheet" href="/TraceyV.github.io/css/project.css">
+    <link rel="icon" type="image/x-icon" href="/img/logo.png">
+    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/css/project.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Micro+5&family=Oswald:wght@200..700&family=Potta+One&display=swap"
         rel="stylesheet">
@@ -16,22 +16,22 @@
 <body id="body6">
     <div class="onTop">
         <section id="logo">
-            <img src="/TraceyV.github.io/img/logo.png" alt="">
+            <img src="/img/logo.png" alt="">
         </section>
         <nav>
             <section id="desktop">
-                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
-                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
-                <li><a href="/TraceyV.github.io/about.html">About</a></li>
-                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
-                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
+                <li><a href="/work.html">&#8678; Back</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/work.html">Work</a></li>
+                <li><a href="/contact.html">Contacts</a></li>
             </section>
             <section id="mobile">
-                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
-                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
-                <li><a href="/TraceyV.github.io/about.html">About</a></li>
-                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
-                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
+                <li><a href="/work.html">&#8678; Back</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/work.html">Work</a></li>
+                <li><a href="/contact.html">Contacts</a></li>
             </section>
             <section class="hamburgerLines" onclick="myFunction(this)">
                 <div class="line1"></div>
@@ -63,7 +63,7 @@
             <section>
                 <h2>&nbsp;Software used</h2>
                 <div id="softwareUsed">
-                    <img class="softwareImg" src="/TraceyV.github.io/img/illustrator.png" alt="">
+                    <img class="softwareImg" src="/img/illustrator.png" alt="">
                 </div>
             </section>
         </div>
@@ -81,7 +81,7 @@
                 as I was just starting on the Micromedia program, and I have not really drawn digitally prior to that
                 time.
             </p><br>
-            <img class="outcome" src="/TraceyV.github.io/projectImg/tradingCards.png" alt="">
+            <img class="outcome" src="/projectImg/tradingCards.png" alt="">
         </section>
 
         <section>
@@ -91,16 +91,16 @@
                 achieve the look that I was going for. I changed the typography from black to white for readability purposes and I
                 was happy with the outcome in the end.
             </p><br>
-            <img class="outcomeCards" src="/TraceyV.github.io/projectImg/tcPrint1.png" alt="">
-            <img class="outcomeCards" src="/TraceyV.github.io/projectImg/tcPrint2.png" alt="">
-            <img class="outcomeCards" src="/TraceyV.github.io/projectImg/tcPrint3.png" alt="">
-            <img class="outcomeCards" src="/TraceyV.github.io/projectImg/tcPrint4.png" alt="">
+            <img class="outcomeCards" src="/projectImg/tcPrint1.png" alt="">
+            <img class="outcomeCards" src="/projectImg/tcPrint2.png" alt="">
+            <img class="outcomeCards" src="/projectImg/tcPrint3.png" alt="">
+            <img class="outcomeCards" src="/projectImg/tcPrint4.png" alt="">
         </section>
     </div>
 
     <div id="buttonProjects">
-        <button id="previous" class="buttons"><a href="/TraceyV.github.io/projects/project5.html">Previous Project</a></button>
-        <button id="next" class="buttons"><a href="/TraceyV.github.io/projects/project7.html">Next Project</a></button>
+        <button id="previous" class="buttons"><a href="/projects/project5.html">Previous Project</a></button>
+        <button id="next" class="buttons"><a href="/projects/project7.html">Next Project</a></button>
     </div>
 
     <footer>
