--- a/projects/project8.html
+++ b/projects/project8.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 8</title>
-    <link rel="icon" type="image/x-icon" href="/TraceyV.github.io/img/logo.png">
-    <link rel="stylesheet" href="/TraceyV.github.io/css/app.css">
-    <link rel="stylesheet" href="/TraceyV.github.io/css/project.css">
+    <link rel="icon" type="image/x-icon" href="/img/logo.png">
+    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/css/project.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Micro+5&family=Oswald:wght@200..700&family=Potta+One&display=swap"
         rel="stylesheet">
@@ -16,22 +16,22 @@
 <body>
     <div class="onTop">
         <section id="logo">
-            <img src="/TraceyV.github.io/img/logo.png" alt="">
+            <img src="/img/logo.png" alt="">
         </section>
         <nav>
             <section id="desktop">
-                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
-                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
-                <li><a href="/TraceyV.github.io/about.html">About</a></li>
-                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
-                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
+                <li><a href="/work.html">&#8678; Back</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/work.html">Work</a></li>
+                <li><a href="/contact.html">Contacts</a></li>
             </section>
             <section id="mobile">
-                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
-                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
-                <li><a href="/TraceyV.github.io/about.html">About</a></li>
-                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
-                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
+                <li><a href="/work.html">&#8678; Back</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/work.html">Work</a></li>
+                <li><a href="/contact.html">Contacts</a></li>
             </section>
             <section class="hamburgerLines" onclick="myFunction(this)">
                 <div class="line1"></div>
@@ -46,7 +46,7 @@
     </div>
 
     <div id="detailsA">
-        <div id="projectPic"><img src="/TraceyV.github.io/img/hoodie.png" alt=""></div>
+        <div id="projectPic"><img src="/img/hoodie.png" alt=""></div>
 
         <div id="infoSections">
             <section>
@@ -68,8 +68,8 @@
             <section>
                 <h2>&nbsp;Software used</h2>
                 <div id="softwareUsed">
-                    <img class="softwareImg" src="/TraceyV.github.io/img/illustrator.png" alt="">
-                    <img class="softwareImg" src="/TraceyV.github.io/img/photoshop.png" alt="">
+                    <img class="softwareImg" src="/img/illustrator.png" alt="">
+                    <img class="softwareImg" src="/img/photoshop.png" alt="">
                 </div>
             </section>
         </div>
@@ -93,11 +93,11 @@
                 time to make those graphics whenever we can and it was not always easy as we were sometimes too
                 exhausted to even think about drawing.
             </p><br>
-            <img class="outcome" src="/TraceyV.github.io/projectImg/wtpGraphics_cat.png" alt="">
-            <img class="outcome" src="/TraceyV.github.io/projectImg/wtpGraphics_monkey.png" alt="">
-            <img class="outcome" src="/TraceyV.github.io/projectImg/wtpGraphics_wolf.png" alt="">
-            <img class="outcome" src="/TraceyV.github.io/projectImg/wtpGraphics_rat.png" alt="">
-            <img class="outcome" src="/TraceyV.github.io/projectImg/wtpGraphics_gorilla.png" alt="">
+            <img class="outcome" src="/projectImg/wtpGraphics_cat.png" alt="">
+            <img class="outcome" src="/projectImg/wtpGraphics_monkey.png" alt="">
+            <img class="outcome" src="/projectImg/wtpGraphics_wolf.png" alt="">
+            <img class="outcome" src="/projectImg/wtpGraphics_rat.png" alt="">
+            <img class="outcome" src="/projectImg/wtpGraphics_gorilla.png" alt="">
 
 
         </section>
@@ -116,19 +116,19 @@
                 <br>The following images are the outcome of my own work and to save space, the said images are just a
                 few of the many mockups done.
             </p><br>
-            <img class="outcome" src="/TraceyV.github.io/projectImg/catHoodie.png" alt="">
-            <img class="outcome" src="/TraceyV.github.io/projectImg/monkeyHoodie.png" alt="">
-            <img class="outcome" src="/TraceyV.github.io/projectImg/wolfSweater.png" alt="">
-            <img class="outcome" src="/TraceyV.github.io/projectImg/ratSweater.png" alt="">
-            <img class="outcome" src="/TraceyV.github.io/projectImg/gorillaHat.png" alt="">
+            <img class="outcome" src="/projectImg/catHoodie.png" alt="">
+            <img class="outcome" src="/projectImg/monkeyHoodie.png" alt="">
+            <img class="outcome" src="/projectImg/wolfSweater.png" alt="">
+            <img class="outcome" src="/projectImg/ratSweater.png" alt="">
+            <img class="outcome" src="/projectImg/gorillaHat.png" alt="">
         </section>
     </div>
 
 
     <div id="buttonProjects">
-        <button id="previous" class="buttons"><a href="/TraceyV.github.io/projects/project7.html">Previous
+        <button id="previous" class="buttons"><a href="/projects/project7.html">Previous
                 Project</a></button>
-        <button id="next" class="buttons"><a href="/TraceyV.github.io/projects/project9.html">Next Project</a></button>
+        <button id="next" class="buttons"><a href="/projects/project9.html">Next Project</a></button>
     </div>
 
     <footer>
