--- a/projects/project9.html
+++ b/projects/project9.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 9</title>
-    <link rel="icon" type="image/x-icon" href="/TraceyV.github.io/img/logo.png">
-    <link rel="stylesheet" href="/TraceyV.github.io/css/app.css">
-    <link rel="stylesheet" href="/TraceyV.github.io/css/project.css">
+    <link rel="icon" type="image/x-icon" href="/img/logo.png">
+    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/css/project.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Micro+5&family=Oswald:wght@200..700&family=Potta+One&display=swap"
         rel="stylesheet">
@@ -16,22 +16,22 @@
 <body>
     <div class="onTop">
         <section id="logo">
-            <img src="/TraceyV.github.io/img/logo.png" alt="">
+            <img src="/img/logo.png" alt="">
         </section>
         <nav>
             <section id="desktop">
-                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
-                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
-                <li><a href="/TraceyV.github.io/about.html">About</a></li>
-                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
-                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
+                <li><a href="/work.html">&#8678; Back</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/work.html">Work</a></li>
+                <li><a href="/contact.html">Contacts</a></li>
             </section>
             <sec tion id="mobile">
-                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
-                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
-                <li><a href="/TraceyV.github.io/about.html">About</a></li>
-                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
-                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
+                <li><a href="/work.html">&#8678; Back</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/work.html">Work</a></li>
+                <li><a href="/contact.html">Contacts</a></li>
             </section>
             <section class="hamburgerLines" onclick="myFunction(this)">
                 <div class="line1"></div>
@@ -46,7 +46,7 @@
     </div>
 
     <div id="detailsA">
-        <div id="projectPic"><img src="/TraceyV.github.io/img/logoAnimation.png" alt=""></div>
+        <div id="projectPic"><img src="/img/logoAnimation.png" alt=""></div>
 
         <div id="infoSections">
             <section>
@@ -65,8 +65,8 @@
             <section>
                 <h2>&nbsp;Software used</h2>
                 <div id="softwareUsed">
-                    <img class="softwareImg" src="/TraceyV.github.io/img/illustrator.png" alt="">
-                    <img class="softwareImg" src="/TraceyV.github.io/img/after.png" alt="">
+                    <img class="softwareImg" src="/img/illustrator.png" alt="">
+                    <img class="softwareImg" src="/img/after.png" alt="">
                 </div>
             </section>
         </div>
@@ -83,8 +83,8 @@
                 Overall there were techniques that were needed to use in order to achieve my goal on
                 making a smooth 5 second animation video.           
             </p><br>
-            <img class="outcome" src="/TraceyV.github.io/projectImg/logoAnimDraft.png" alt="">
-            <img class="outcome" src="/TraceyV.github.io/projectImg/logoAnimDraft2.png" alt="">
+            <img class="outcome" src="/projectImg/logoAnimDraft.png" alt="">
+            <img class="outcome" src="/projectImg/logoAnimDraft2.png" alt="">
         </section>
 
         <section>
@@ -103,8 +103,8 @@
 
 
     <div id="buttonProjects">
-        <button id="previous" class="buttons"><a href="/TraceyV.github.io/projects/project8.html">Previous Project</a></button>
-        <button id="next" class="buttons"><a href="/TraceyV.github.io/projects/project10.html">Next Project</a></button>
+        <button id="previous" class="buttons"><a href="/projects/project8.html">Previous Project</a></button>
+        <button id="next" class="buttons"><a href="/projects/project10.html">Next Project</a></button>
     </div>
 
     <footer>
