--- a/work.html
+++ b/work.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Work</title>
-    <link rel="stylesheet" href="/TraceyV.github.io/css/app.css">
+    <link rel="stylesheet" href="/css/app.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Micro+5&family=Oswald:wght@200..700&family=Potta+One&display=swap"
         rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/TraceyV.github.io/img/logo.png">
+    <link rel="icon" type="image/x-icon" href="/img/logo.png">
 </head>
 
 <body>
@@ -21,16 +21,16 @@
         </section>
         <nav>
             <section id="desktop">
-                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
-                <li><a href="/TraceyV.github.io/about.html">About</a></li>
-                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
-                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/work.html">Work</a></li>
+                <li><a href="/contact.html">Contacts</a></li>
             </section>
             <section id="mobile">
-                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
-                <li><a href="/TraceyV.github.io/about.html">About</a></li>
-                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
-                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/work.html">Work</a></li>
+                <li><a href="/contact.html">Contacts</a></li>
             </section>
             <section class="hamburgerLines" onclick="myFunction(this)">
                 <div class="line1"></div>
@@ -42,47 +42,47 @@
     
     <p id="workP">Chosen Works</p>
     <div id="work">
-        <a href="/TraceyV.github.io/projects/project1.html">
+        <a href="/projects/project1.html">
             <div class="project-wrapper">
-                <img src="/TraceyV.github.io/img/threePointP.png" alt="">
+                <img src="/img/threePointP.png" alt="">
                 <div class="project-name">
                     3 Point Perspective Art
                 </div>
             </div>
         </a>
-        <a href="/TraceyV.github.io/projects/project2.html">
+        <a href="/projects/project2.html">
             <div class="project-wrapper">
-                <img src="/TraceyV.github.io/img/isometric.png" alt="">
+                <img src="/img/isometric.png" alt="">
                 <div class="project-name">
                     Isometric Perspective Art
                 </div>
             </div>
         </a>
-        <a href="/TraceyV.github.io/projects/project3.html">
+        <a href="/projects/project3.html">
             <div class="project-wrapper">
-                <img src="/TraceyV.github.io/img/bookCover.png" alt="">
+                <img src="/img/bookCover.png" alt="">
                 <div class="project-name">
                     Book Cover
                 </div>
             </div>
         </a>
-        <a href="/TraceyV.github.io/projects/project4.html">
+        <a href="/projects/project4.html">
             <div class="project-wrapper">
-                <img src="/TraceyV.github.io/img/ebookMockup.png" alt="">
+                <img src="/img/ebookMockup.png" alt="">
                 <div class="project-name">
                     E-Book
                 </div>
             </div>
         </a>
-        <a href="/TraceyV.github.io/projects/project5.html">
+        <a href="/projects/project5.html">
             <div class="project-wrapper">
-                <img src="/TraceyV.github.io/img/chocoBox.png" alt="">
+                <img src="/img/chocoBox.png" alt="">
                 <div class="project-name">
                     Chocolate Box
                 </div>
             </div>
         </a>
-        <a href="/TraceyV.github.io/projects/project6.html">
+        <a href="/projects/project6.html">
             <div class="project-wrapper">
                 <img src="/becoming2/img/WorkImprovedTC.png" alt="">
                 <div class="project-name">
@@ -90,39 +90,39 @@
                 </div>
             </div>
         </a>
-        <a href="/TraceyV.github.io/projects/project7.html">
+        <a href="/projects/project7.html">
                 <div class="project-wrapper">
-                    <img src="/TraceyV.github.io/img/magazineCover.png" alt="">
+                    <img src="/img/magazineCover.png" alt="">
                     <div class="project-name">
                         Magazine Cover
                     </div>
                 </div>
             </a>
-            <a href="/TraceyV.github.io/projects/project8.html">
+            <a href="/projects/project8.html">
                 <div class="project-wrapper">
-                    <img src="/TraceyV.github.io/img/hoodie.png" alt="">
+                    <img src="/img/hoodie.png" alt="">
                     <div class="project-name">
                         Gym Apparel
                     </div>
                 </div>
             </a>
-            <a href="/TraceyV.github.io/projects/project9.html">
+            <a href="/projects/project9.html">
                 <div class="project-wrapper">
-                    <img src="/TraceyV.github.io/img/logoAnimation.png" alt="">
+                    <img src="/img/logoAnimation.png" alt="">
                     <div class="project-name">
                         Logo Animation Video
                     </div>
                 </div>
             </a>
-            <a href="/TraceyV.github.io/projects/project10.html">
+            <a href="/projects/project10.html">
                 <div class="project-wrapper">
-                    <img src="/TraceyV.github.io/projectImg/wineBottleFront.png" alt="">
+                    <img src="/projectImg/wineBottleFront.png" alt="">
                     <div class="project-name">
                         Wine Bottle Labels
                     </div>
                 </div>
             </a>
-            <a href="/TraceyV.github.io/projects/project11.html">
+            <a href="/projects/project11.html">
                 <div class="project-wrapper">
                     <img src="/becoming2/img/SVGImproved.png" alt="">
                     <div class="project-name">
@@ -130,9 +130,9 @@
                     </div>
                 </div>
             </a>
-            <a href="/TraceyV.github.io/projects/project12.html">
+            <a href="/projects/project12.html">
                 <div class="project-wrapper">
-                    <img src="/TraceyV.github.io/projectImg/clientWebsiteOfficial.png" alt="">
+                    <img src="/projectImg/clientWebsiteOfficial.png" alt="">
                     <div class="project-name">
                         Client Website Jems Nail Studio
                     </div>
@@ -141,10 +141,10 @@
     </div>
     <div id="caseStudy">
         <h2>Case Study: Organ Donation</h2>
-        <img src="/TraceyV.github.io/img/sPA.png" alt="">
+        <img src="/img/sPA.png" alt="">
         <img src="/becoming2/img/nestThree.png" alt="">
         <img src="/becoming2/img/teamworkTwo.png" alt="">
-        <a id="case" href="/TraceyV.github.io/caseStudy.html">Click here to check out my SPA case-study</a>
+        <a id="case" href="/caseStudy.html">Click here to check out my SPA case-study</a>
         <a id="case" href="/becoming2/case.html">Click here to check out my Personal Project case-study</a>
         <a id="case" href="/becoming2/case.html">Click here to check out my Interacting in the Workplace case-study</a>
 
