--- a/projects/project11.html
+++ b/projects/project11.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 11</title>
-    <link rel="icon" type="image/x-icon" href="/TraceyV.github.io/img/logo.png">
-    <link rel="stylesheet" href="/TraceyV.github.io/css/app.css">
-    <link rel="stylesheet" href="/TraceyV.github.io/css/project.css">
+    <link rel="icon" type="image/x-icon" href="/img/logo.png">
+    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/css/project.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Micro+5&family=Oswald:wght@200..700&family=Potta+One&display=swap"
         rel="stylesheet">
@@ -16,22 +16,22 @@
 <body>
     <div class="onTop">
         <section id="logo">
-            <img src="/TraceyV.github.io/img/logo.png" alt="">
+            <img src="/img/logo.png" alt="">
         </section>
         <nav>
             <section id="desktop">
-                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
-                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
-                <li><a href="/TraceyV.github.io/about.html">About</a></li>
-                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
-                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
+                <li><a href="/work.html">&#8678; Back</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/work.html">Work</a></li>
+                <li><a href="/contact.html">Contacts</a></li>
             </section>
             <section id="mobile">
-                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
-                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
-                <li><a href="/TraceyV.github.io/about.html">About</a></li>
-                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
-                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
+                <li><a href="/work.html">&#8678; Back</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/work.html">Work</a></li>
+                <li><a href="/contact.html">Contacts</a></li>
             </section>
             <section class="hamburgerLines" onclick="myFunction(this)">
                 <div class="line1"></div>
@@ -46,7 +46,7 @@
     </div>
 
     <div id="detailsA">
-        <div id="projectPic"><img src="/TraceyV.github.io/projectImg/svgAnim.png" alt=""></div>
+        <div id="projectPic"><img src="/projectImg/svgAnim.png" alt=""></div>
 
         <div id="infoSections">
             <section>
@@ -64,9 +64,9 @@
             <section>
                 <h2>&nbsp;Software used</h2>
                 <div id="softwareUsed">
-                    <img class="softwareImg" src="/TraceyV.github.io/img/illustrator.png" alt="">
-                    <img class="softwareImg" src="/TraceyV.github.io/img/html.png" alt="">
-                    <img class="softwareImg" src="/TraceyV.github.io/img/css.png" alt="">
+                    <img class="softwareImg" src="/img/illustrator.png" alt="">
+                    <img class="softwareImg" src="/img/html.png" alt="">
+                    <img class="softwareImg" src="/img/css.png" alt="">
                 </div>
             </section>
         </div>
@@ -82,8 +82,8 @@
                 would be a big challenge for me
                 in terms of testing my patience and overall skills.
             </p><br>
-            <img class="outcome" src="/TraceyV.github.io/projectImg/svgReference.png" alt="">
-            <img class="outcome" src="/TraceyV.github.io/projectImg/svgReferenceII.png" alt="">
+            <img class="outcome" src="/projectImg/svgReference.png" alt="">
+            <img class="outcome" src="/projectImg/svgReferenceII.png" alt="">
 
         </section>
 
@@ -110,9 +110,9 @@
 
 
     <div id="buttonProjects">
-        <button id="previous" class="buttons"><a href="/TraceyV.github.io/projects/project10.html">Previous
+        <button id="previous" class="buttons"><a href="/projects/project10.html">Previous
                 Project</a></button>
-        <button id="next" class="buttons"><a href="/TraceyV.github.io/projects/project12.html">Next Project</a></button>
+        <button id="next" class="buttons"><a href="/projects/project12.html">Next Project</a></button>
     </div>
 
     <footer>
